Add errors modules
