# backend/src/Modules/Errors/Autodor.Modules.Errors/Features/ValidationModel/CreateValidationModelErrorRequestValidator.cs
@@ -1,0 +1,25 @@
+using FluentValidation;
+
+namespace Autodor.Modules.Errors.Features.ValidationModel;
+
+public class CreateValidationModelErrorRequestValidator : AbstractValidator<CreateValidationModelErrorRequest>
+{
+    public CreateValidationModelErrorRequestValidator()
+    {
+        RuleFor(x => x.Name)
+            .NotEmpty()
+            .WithMessage("Name is required.")
+            .MinimumLength(3)
+            .WithMessage("Name must be at least 3 characters long.");
+
+        RuleFor(x => x.Email)
+            .NotEmpty()
+            .WithMessage("Email is required.")
+            .EmailAddress()
+            .WithMessage("Email must be a valid email address.");
+
+        RuleFor(x => x.Quantity)
+            .GreaterThan(0)
+            .WithMessage("Quantity must be greater than zero.");
+    }
+}
